<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/list_view"
        android:title="@string/list_view_style">
        <menu>
            <item
                android:id="@+id/list_view_vertical_stander"
                android:title="@string/vertical_stander" />
            <item
                android:id="@+id/list_view_vertical_reverse"
                android:title="@string/vertical_reverse" />
            <item
                android:id="@+id/list_view_horizontal_stander"
                android:title="@string/horizontal_stander" />
            <item
                android:id="@+id/list_view_horizontal_reverse"
                android:title="@string/horizontal_reverse" />
        </menu>
    </item>
    <item
        android:id="@+id/grid_view"
        android:title="@string/grid_view_style">
        <menu>
            <item
                android:id="@+id/grid_view_vertical_stander"
                android:title="@string/vertical_stander" />
            <item
                android:id="@+id/grid_view_vertical_reverse"
                android:title="@string/vertical_reverse" />
            <item
                android:id="@+id/grid_view_horizontal_stander"
                android:title="@string/horizontal_stander" />
            <item
                android:id="@+id/grid_view_horizontal_reverse"
                android:title="@string/horizontal_reverse" />
        </menu>
    </item>
    <item
        android:id="@+id/stagger_view"
        android:title="@string/stagger_style">
        <menu>
            <item
                android:id="@+id/stagger_view_vertical_stander"
                android:title="@string/vertical_stander" />
            <item
                android:id="@+id/stagger_view_vertical_reverse"
                android:title="@string/vertical_reverse" />
            <item
                android:id="@+id/stagger_view_horizontal_stander"
                android:title="@string/horizontal_stander" />
            <item
                android:id="@+id/stagger_view_horizontal_reverse"
                android:title="@string/horizontal_reverse" />
        </menu>
    </item>

    <item
        android:id="@+id/multi_type"
        android:title="多种条目类型">

    </item>
</menu>